--- a/style.css
+++ b/style.css
@@ -1,117 +1,112 @@
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background: linear-gradient(#ffffff, #ffffff);
-  }
-  
-  #noButton {
-    position: absolute;
-    margin-left: 150px;
-    transition: 0.5s;
-    margin-top: 30px;
-  }
-  
-  #yesButton {
-    position: absolute;
-    margin-right: 150px;
-    margin-top: 30px;
-  }
-  
-  .header_text {
-    font-family: "Tahoma";
-    font-size: 50px;
-    font-weight: bold;
-    text-align: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    color: #c00a34;
-  }
-  
-  .text {
-    font-family: "Tahoma";
-    font-size: 25px;
-    font-weight: bold;
-    color: white;
-    text-align: center;
-    margin-top: 20px;
-    margin-bottom: 0px;
-  }
-  
-  .buttons {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-    margin-left: 20px;
-  }
-  
-  .btn {
-    background-color: #c00a34;
-    color: white;
-    font-weight: 600;
-    padding: 15px 32px;
-    text-align: center;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border: none;
-    border-radius: 12px;
-    transition: background-color 0.3s ease;
-    box-shadow: 0 3px 3px black;
-  }
-  
-  .btn:hover {
-    background-color: #ffffff;
-    color: #017cff;
-  }
-  
-  .gif_container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  p {
-    color: white;
-    margin-left: 50%;
-  }
-  
-  p a {
-    color: rgb(255, 255, 255);
-    font-size: 20px;
-    font-weight: 600;
-    opacity: 0.25;
-  }
-  
-  /* New styles for the calendar */
-  #calendar {
-    font-family: "Tahoma";
-    margin-top: 30px;
-    border-collapse: collapse;
-    width: 300px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  #calendar th, #calendar td {
-    padding: 15px;
-    text-align: center;
-  }
-  
-  #calendar th {
-    background-color: #e46b85;
-    color: white;
-  }
-  
-  #calendar td {
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  #calendar td:hover {
-    background-color: #ecf0f1;
-  }
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: linear-gradient(#ffffff, #ffffff);
+}
+
+h1 {
+  font-family: "Tahoma";
+  font-size: 50px;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: #ff003c;
+}
+
+h2 {
+  font-family: "Tahoma";
+  font-size: 35px;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: #ff517a;
+}
+
+h3 {
+  font-family: "Tahoma";
+  font-size: 20px;
+  font-style: italic;
+  text-align: center;
+  color: #ff98b0;
+}
+
+.gif-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  margin-left: 0px;
+}
+
+#yes-button {
+  position: absolute;
+  margin-right: 200px;
+  margin-top: 100px;
+}
+
+#no-button {
+  position: absolute;
+  margin-left: 200px;
+  transition: 0.5s;
+  margin-top: 100px;
+}
+
+button {
+  background-color: #ff003c;
+  color: white;
+  font-weight: 600;
+  padding: 15px 32px;
+  text-align: center;
+  display: inline-block;
+  font-size: 16px;
+  margin: 30px 30px;
+  cursor: pointer;
+  border: none;
+  border-radius: 12px;
+  transition: background-color 0.3s ease;
+  box-shadow: 0 3px 3px black;
+}
+
+button:hover {
+  background-color: #ff98b0;
+  color: #ffffff;
+}
+
+#calendar {
+  font-family: "Tahoma";
+  margin-top: 10px;
+  border-collapse: collapse;
+  width: 300px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+#calendar th,
+#calendar td {
+  padding: 15px;
+  text-align: center;
+}
+
+#calendar th {
+  background-color: #ff98b0;
+  color: white;
+}
+
+#calendar td {
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+#calendar td:hover {
+  background-color: #ffd6e0;
+}
